# gd32vf103-pinecil-demo-rs

./: Cargo.toml  LICENCE  README.md  memory.x
00-blinky-raw-pointer/: Cargo.toml  README.md
00-blinky-raw-pointer/src/: main.rs
01-blinky-pac/: Cargo.toml  README.md
02-blinky-hal/: Cargo.toml  README.md
02-blinky-hal/src/: main.rs
03-button-loop-blinky-hal/: Cargo.toml  README.md
03-button-loop-blinky-hal/src/: main.rs
04-uart-loop-pac/: Cargo.toml  README.md
04-uart-loop-pac/src/: main.rs
05-uart-loop-hal/: Cargo.toml  README.md
05-uart-loop-hal/src/: main.rs
06-oled/: Cargo.toml  README.md
06-oled/src/: frame0.raw  frame1.raw  main.rs
07-bma223/: Cargo.toml  README.md
07-bma223/src/: main.rs
notes/: 01-JTAG.md  02-write-panic-to-UART.md
